# psyxe-mcp

./: .gitignore  Cargo.toml  FAQ.md  LICENSE  README.md  build.sh  debug-mcp.sh  install-shortcuts.sh  manifest.json  release.sh  server.json  tools.json
crates/mcp-core/: Cargo.toml
crates/mcp-core/src/: access_store.rs  apple_contacts.rs  apple_maps.rs  apple_messages.rs  apple_notes.rs  apple_reminders.rs  apple_weather.rs  applescript_utils.rs  brave_search.rs  code_interpreter.rs  eventkit_ffi.rs  fetch_url.rs  file_ops.rs  file_search.rs  gemini_image.rs  image_security.rs  lib.rs  memvid_notes.rs  nominatim.rs  open_meteo.rs  pdf_generator.rs  tool_dispatch.rs  tool_semaphore.rs  tools.rs  youtube_transcript.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: access_cli.rs  access_config.rs  access_filter.rs  main.rs  server.rs  tool_filter.rs
examples/: download-bert-model.sh  load-sample-notes.sh  sample-notes.md
scripts/: build-release.sh  com.prolog-router.notes-index.plist  messages_send.applescript  notes_count.applescript  notes_create.applescript  notes_get.applescript  notes_get_batch.applescript  notes_index_build.applescript  notes_latest_modified.applescript  notes_list.applescript  notes_open.applescript  notes_search.applescript  reminders_complete.applescript  reminders_create.applescript  reminders_create_batch.applescript  reminders_create_list.applescript  reminders_delete.applescript  reminders_delete_list.applescript  reminders_edit.applescript  reminders_edit_batch.applescript  reminders_get.applescript  reminders_list.applescript  reminders_list_lists.applescript  reminders_open.applescript  reminders_search.applescript
shortcuts/: Open_File_URL.shortcut  Open_File_URL.signed.shortcut  Set_Reminder_URL.shortcut  Set_Reminder_URL.signed.shortcut
swift/contacts-helper/: Package.swift
swift/contacts-helper/.build/: build.db  debug.yaml  release.yaml
swift/contacts-helper/.build/arm64-apple-macosx/debug/: contacts-helper  plugin-tools-description.json
swift/contacts-helper/.build/arm64-apple-macosx/debug/Modules/: contacts_helper.swiftdoc  contacts_helper.swiftmodule  contacts_helper.swiftsourceinfo
swift/contacts-helper/.build/arm64-apple-macosx/release/: contacts-helper  description.json
swift/contacts-helper/.build/index-build/: build.db  debug.yaml
swift/contacts-helper/Sources/: ContactStore.swift  CreateContact.swift  DeleteContact.swift  EditContact.swift  GetContact.swift  ListContacts.swift  ListGroups.swift  SearchContacts.swift  main.swift
swift/pdf-helper/: Package.swift
swift/pdf-helper/.build/: build.db  plugin-tools.yaml
swift/pdf-helper/.build/arm64-apple-macosx/release/: pdf-helper  plugin-tools-description.json
swift/pdf-helper/Sources/: Helpers.swift  PDFGenerator.swift  main.swift
swift/reminders-helper/: Package.swift
swift/reminders-helper/.build/: build.db  debug.yaml  release.yaml
swift/reminders-helper/.build/arm64-apple-macosx/debug/: plugin-tools-description.json  reminders-helper
swift/reminders-helper/.build/arm64-apple-macosx/release/: description.json  reminders-helper
swift/reminders-helper/.build/index-build/: build.db  debug.yaml
swift/reminders-helper/Sources/: CompleteReminder.swift  CreateBatch.swift  CreateList.swift  CreateReminder.swift  DeleteList.swift  DeleteReminder.swift  EditBatch.swift  EditReminder.swift  EventKitStore.swift  GetReminder.swift  ListLists.swift  ListReminders.swift  OpenReminders.swift  Search.swift  SetURL.swift  main.swift
(+1200 files in other folders)
