[package]
name = "psyxe-mcp"
version = "0.1.3"
edition = "2021"
description = "Apple ecosystem MCP server for Claude Code"
license = "Apache-2.0"

[[bin]]
name = "psyxe-mcp"
path = "src/main.rs"

[dependencies]
# Open-source Apple ecosystem tools library
psyxe-mcp-core = { path = "../mcp-core" }

# MCP protocol (official Rust SDK)
rmcp = { version = "1", features = ["server", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging (must go to stderr, not stdout)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Config file
toml = "0.8"
dirs = "6"

# Error handling
anyhow = "1.0"


[features]
default = ["memvid"]
memvid = ["psyxe-mcp-core/memvid"]
